# Fractal-Brain

./: CHANGELOG.md  MANIFEST.in  README.md  RELEASE_NOTES.md  To-Do.md  adaptive_optimizer.py  ai_pipeline.py  config.yaml  decoder.py  decomposer.py  demo_showcase.py  engine.py  how_to_use.py  hybrid_cli.py  hybrid_engine.py  lkg.py  memory.py  moe_model.py  orchestrator.py  persistence_demo.py  pipeline_optimizer.py  planner.py  pyproject.toml  quantization.py  requirements.txt  run_demo.bat  run_tests.py  tokenizer.py  train_on_text.py
data/: bootstrap_dataset.jsonl  engine.db
docs/: ADAPTIVE_OPTIMIZER.md  API_REFERENCE.md  ARCHITECTURE.md  INTERVIEW_PREP.md  PACKAGING.md  TRAINING_GUIDE.md  UNIFIED_PIPELINE.md  open_closed_loop_CHANGELOG.md  open_closed_loop_README.md  open_closed_loop_RELEASE_NOTES.md
fractal_brain/: __init__.py  __main__.py  attention.py  autograd.py  checkpoint.py  core.py  dataset.py  dim_reduction.py  distillation.py  encoder_decoder.py  interfaces.py  jepa.py  logic_folding.py  markov.py  math_utils.py  moe.py  optimizer.py  pid.py  rag.py  recursive_matrices.py  signal.py  storage.py  synaptic.py  tentacles.py  tokenizer.py  turbo_quant.py  wormhole.py
ocle_clean_build/: __init__.py  _pathsetup.py  decoder.py  decomposer.py  engine.py  memory.py  moe_model.py  planner.py  quantization.py  tokenizer.py
tests/: test_cli.py  test_encoder_decoder.py  test_knowledge_graph_integration.py  test_lkg.py  test_package_metadata.py  test_pipeline.py  test_pipeline_optimizer.py  test_pytest_smoke.py  test_regressions.py  test_session_pipeline.py  (+1 more)
(+4 files in other folders)
